--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "googleapis": "^136.0.0"
+    "googleapis": "^136.0.0",
+    "pg": "^8.11.5"
   }
 }
